HelloUltraviolet/Fixtures/RejectedSource/Expressions/RaceTooFewArms/Expected.uv
//! Expected diagnostic metadata for the RaceTooFewArms rejected-source specimen.

expectedDiagnostic("E-CON-0260", "rule.21.Race-Arity-Err")
